# shaker

./: .gitignore  .gitreview  .stestr.conf  .testr.conf  .zuul.yaml  Dockerfile  README.md  README.rst  config-generator.conf  doc-requirements.txt  openstack-common.conf  readthedocs.yml  requirements-agent.txt  requirements.txt  setup-agent.cfg  setup-agent.py  setup.cfg  test-requirements.txt  tox.ini
doc/source/: architecture.rst  catalog.rst  conf.py  config-generator.conf  config.rst  contributing.rst  examples.rst  examples_spot.rst  index.rst  installation.rst  tools.rst  usage.rst
doc/source/_templates/: sidebarlinks.html
doc/source/examples/: full_l2.rst  full_l3_east_west.rst  full_l3_north_south.rst  index.rst
doc/source/k8s/: shaker-pod.yaml  shaker-svc.yaml
doc/source/reports/: index.rst
doc/source/tools/: shaker-agent.txt  shaker-all-in-one.txt  shaker-cleanup.txt  shaker-image-builder.txt  shaker-report.txt  shaker-spot.txt  shaker.txt
etc/: shaker.conf
image-elements/shaker/: element-deps
image-elements/shaker-agent/: README.rst  element-deps
image-elements/shaker-agent/install.d/: 51-shaker-agent
image-elements/shaker-tools/: README.rst  element-deps
image-elements/shaker-tools/install.d/: 40-iperf  42-netperf
image-elements/shaker-tools/post-install.d/: 40-iperf
scenarios/: networking_between_two_vms.yaml  single_net.heat.template
scenarios/misc/: instance_metadata.hot  instance_metadata.yaml  static_agent.yaml
scenarios/networking/: dense_l2.yaml  dense_l3_east_west.yaml  dense_l3_north_south.yaml  full_l2.yaml  full_l3_east_west.yaml  full_l3_north_south.yaml  l2.hot  l2.yaml  l2_dense.yaml  l2_double_density.yaml  l3_east_west.hot  l3_east_west.yaml  l3_north_south.hot  l3_north_south.yaml  perf_l2.yaml  perf_l3_east_west.yaml  perf_l3_north_south.yaml  private_net_to_floating_ip.hot  private_net_to_floating_ip.yaml  same_net.hot  same_net.yaml  static_agents.yaml  two_nets.yaml  two_routers.hot  two_routers.yaml
scenarios/storage/: dummy.hot  dummy.yaml
shaker/: lib.py  version.py
shaker/agent/: agent.py  daemon.py
shaker/engine/: all_in_one.py  config.py  const.py  deploy.py  executors.py  heat.py  image_builder.py  installer.py  installer.yaml  keystone.py  main.py  math.py  messaging.py  neutron.py  nova.py  quorum.py  report.py  report.template  report2.html  server.py  sla.py  spot.py  utils.py  validation_utils.py  writer.py
shaker/queue/: queue_device.py
shaker/resources/: image_builder_template.yaml  report_template.html  report_template.jinja2
shaker/tests/: fakes.py  test_agent.py  test_deploy.py  test_flent_executor.py  test_iperf_executor.py  test_iperf_graph_executor.py  test_lib.py  test_netperf_executor.py  test_netperf_wrapper_executor.py  test_operations.py  test_quorum.py  test_report.py  test_scenarios.py  test_server.py  test_sla.py  test_traffic_aggregator.py  test_utils.py
tests/: test_deploy.py  test_flent_executor.py  test_iperf_graph_executor.py  test_netperf_executor.py  test_netperf_wrapper_executor.py  test_operations.py  test_quorum.py  test_report.py  test_server.py  test_sla.py  test_traffic_aggregator.py  test_utils.py
tools/: build_agent_pkg.sh  build_scenario_catalog.py  process_subunit.sh  run_agent_as_daemon.py  svg2png.sh
tools/playbooks/: dockerhub_publish.yml
(+122 files in other folders)
