[metadata]
name = shaker
summary = Shake VMs with our sheer-class tests!
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    shaker

[entry_points]
console_scripts =
    shaker = shaker.engine.main:main
    shaker-agent = shaker.agent.agent:main
    shaker-queue = shaker.queue.queue_device:main
