[metadata]
name = pyshaker
summary = Distributed data-plane performance testing tool
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    shaker

[entry_points]
console_scripts =
    shaker = shaker.engine.server:main
    shaker-report = shaker.engine.report:main
    shaker-agent = shaker.agent.agent:main
    shaker-image-builder = shaker.engine.image_builder:build_image_entry_point
    shaker-cleanup = shaker.engine.image_builder:cleanup_entry_point
    shaker-spot = shaker.engine.spot:main
    shaker-all-in-one = shaker.engine.all_in_one:main

oslo.config.opts =
    oslo_log = oslo_log._options:list_opts
    shaker.engine.config = shaker.engine.config:list_opts

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

